# screenlock-to-systemd

./: Cargo.toml  README.md  lock-activated.target  pulsemixer-mute.service  pulsemixer-unmute.service  screenlock-to-systemd.service  unlock-activated.target
src/: main.rs
