[package]
name = "screenlock-to-systemd"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.6.4"
dbus-tokio = "0.3.0"
tokio = "0.1.21"
futures = "0.1.27"
clap = "2.33.0"
log = "0.4.0"
env_logger = "0.6.1"
