[package]
name = "screenlock-to-systemd"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.0"
dbus-tokio = "0.6.0"
tokio = { version = "0.2", features = ["full"] }
#tokio = { version = "0.3.0", features = ["full"] }

futures = "0.3.6"
clap = "2.33.3"
log = "0.4.11"
env_logger = "0.8.1"
